# crew-ai

./: .env  .gitignore  README.md  browser_tools.py  calculator_tools.py  main.py  pyproject.toml  readme.md  requirements.txt  search_tools.py
src/: crew.py
src/config/: agents.yaml  tasks.yaml
